Fix content overflow in cta section

--- a/style.css
+++ b/style.css
@@ -212,7 +212,6 @@ cite::before {
 .cta-box {
     color: #f9faf8;
     background-color: #3882f6;
-    height: 180px;
     border-radius: 10px;
     padding: 30px;
     display: flex;
